# python-docker-speedtest

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
build_push_base_images/: Dockerfile  multi-arch-build.sh
src/compare/: compare.py
