[tool.poetry]
name = "python-poetry"
version = "0.1.0"
description = "exploring multi-arch builds, emulation speed etc."
authors = ["Andreas Roth <kommentare@s-lemon.de>"]
license = "MIT"

packages = [
    {include = "compare", from = "src"}
]

[tool.poetry.dependencies]
python = "~3.11.4"
pandas = "^2.0.3"
scipy = "^1.11.2"

[tool.poetry.scripts]
run-matmul = "compare.compare:cli"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"
Sphinx = "^7.2.3"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
